# Nyra

./: .gitignore  Cargo.toml  README.md  build.rs
.run/: Run proj-tree.run.xml  Run.run.xml  proj-tree.json  titlebar-nyra.json
scripts/: build-ocr-release.ps1  setup-dev.ps1
src/: app.rs  apperceiver.rs  capture.rs  main.rs  measure.rs  nyra.rs  perception.rs
src/apperceiver/: tesseract.rs  text_apperceiver.rs
src/capture/: selector.rs  tools.rs
src/job/: entity.rs  mod.rs
src/overlay/: asset.rs  mod.rs  overlay_app.rs  selection.rs
src/overlay_shell/: mod.rs
src/perception/: perception_service.rs  tesseract.rs  text_perceptor.rs
src/platform/: mod.rs  windows.rs
src/sentry/: sentry.rs
src/ui_frontend/: fonts.rs
tests/: windows_screen_ocr.rs
