[package]
name = "nyra"
version = "0.1.0"
edition = "2024"

[dependencies]
tesseract-rs = { git = "https://github.com/LviatYi/tesseract-rs", features = ["build-tesseract"] }
image = "0.25.5"
xcap = "0.9.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

[dev-dependencies]
imageproc = "0.26.1"
