[package]
name = "nyra"
version = "0.1.0"
edition = "2024"

[dependencies]
tesseract-rs = { git = "https://github.com/LviatYi/tesseract-rs", features = ["build-tesseract"] }
image = "0.25.5"
xcap = "0.9.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.47.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
