[package]
name = "nyra"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
tesseract-rs = { git = "https://github.com/LviatYi/tesseract-rs", features = ["build-tesseract"] }
image = "0.25.5"
xcap = "0.9.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
